<resources>
    <string name="app_name">Stay Safe, Sweetheart</string>
    <string name="alert_nav_menu_item_title">Alert!</string>
    <string name="settings_nav_menu_item_title">Settings</string>
    <string name="tips_nav_menu_item_title">Information</string>
    <string name="contact_nav_menu_item_title">Support</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alert_button_text">ALERT!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_warning_text">Please use with great caution and only when in danger</string>
    <string name="add_emergency_contact">Add emergency contact</string>
    <string name="your_emergency_contacts">Your emergency contacts</string>
    <string name="no_emergency_contacts">You do not have any emergency contacts :(</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="name_example">e.g. Michele Stewart</string>
    <string name="phone_example">+40 0770 999 999</string>
    <string name="email_example">e.g. stay_safe@email.org</string>
    <string name="add_contact_button_text">Add contact</string>
    <string name="edit_contact_card_string_button">Edit</string>
    <string name="invalid_contact_name_error">Name cannot be empty</string>
    <string name="invalid_contact_phone_error">Invalid phone number</string>
    <string name="invalid_contact_email_error">Invalid email</string>
    <string name="my_contacts">My contacts</string>
    <string name="emergency_contacts_image_description">An image representing 3 people</string>
    <string name="template_message_image_description">An image depicting a message with a heart</string>
    <string name="template_messages">Template messages</string>
    <string name="invalid_name_error_message">Invalid name</string>
    <string name="invalid_phone_error_message">Invalid phone</string>
    <string name="invalid_email_error_message">Invalid email</string>
    <string name="save_template_message">Save template message</string>
    <string name="your_template_message">Your template message</string>
    <string name="template_message_example">Hi, \nI am Michele Trevor and I really need your help right now! \nPlease try to contact 911!\nHere are my last coordinates:\n54.235 33.425.\nMy life counts on you!</string>
</resources>
