<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_alert"
              android:checked="true"
              android:icon="@drawable/ic_alarm"
              android:title="@string/alert_nav_menu_item_title"/>
        <item android:id="@+id/nav_settings"
              android:icon="@drawable/ic_settings"
              android:title="@string/settings_nav_menu_item_title"/>
        <item android:id="@+id/nav_tips"
              android:icon="@drawable/ic_info"
              android:title="@string/tips_nav_menu_item_title"/>
        <item android:id="@+id/nav_contact"
              android:icon="@drawable/ic_help"
              android:title="@string/contact_nav_menu_item_title"/>
    </group>
</menu>