<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@color/blue_p2">

    <TextView
            android:id="@+id/text_view_alert_add_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="30sp"
            android:textColor="@color/black_p2"/>

    <EditText
            android:id="@+id/edit_text_alert_add_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_example"
            android:inputType="textPersonName"
            android:layout_below="@id/text_view_alert_add_contact_name"/>

    <TextView
            android:id="@+id/text_view_alert_add_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="30sp"
            android:layout_below="@id/edit_text_alert_add_contact_name"
            android:textColor="@color/black_p2"/>

    <EditText
            android:id="@+id/edit_text_alert_add_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_example"
            android:layout_below="@id/text_view_alert_add_contact_phone"/>

    <TextView
            android:id="@+id/text_view_alert_add_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="30sp"
            android:layout_below="@id/edit_text_alert_add_contact_phone"
            android:textColor="@color/black_p2"/>

    <EditText
            android:id="@+id/edit_text_alert_add_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_example"
            android:layout_below="@id/text_view_alert_add_contact_email"/>

    <Button
            android:id="@+id/button_add_new_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_p2"
            android:text="@string/add_contact_button_text"
            android:textColor="@color/white"
            android:layout_below="@id/edit_text_alert_add_contact_email"/>
</RelativeLayout>