<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragments.settings.TemplateMessageFragment">

    <data>

        <variable
                name="templateMessageViewModel"
                type="com.example.staysafesweetheart.viewmodel.settings.template.message.TemplateMessageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_p2"
            android:padding="5dp">

        <TextView
                android:id="@+id/templateMessagesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_template_message"
                android:textColor="@color/black_p2"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <EditText
                android:id="@+id/templateMessagesEditText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/template_message_example"
                android:inputType="textMultiLine"
                android:text="@={templateMessageViewModel.newTemplateMessageText}"
                app:layout_constraintBottom_toTopOf="@+id/templateMessagesButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/templateMessagesTextView" />

        <Button
                android:id="@+id/templateMessagesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red_p2"
                android:onClick="@{() -> templateMessageViewModel.saveNewTemplateMessage()}"
                android:padding="10sp"
                android:text="@string/save_template_message"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>